Roboto font added through @import method

--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 @font-face {
 	font-family: 'fontello'; src: url('fonts/fontello.eot?6880134');
 	src: url('fonts/fontello.eot?6880134#iefix') format('embedded-opentype'),
