--- a/js/pdp/pdc/css/pdc.css
+++ b/js/pdp/pdc/css/pdc.css
@@ -51,7 +51,7 @@
     /* display: none; */
     padding: 10px;
 }
-.pdp-style .pdc-topbar {display:none;}
+/*.pdp-style .pdc-topbar {display:none;}*/
 .topbar-content {
     display: table;
     width: 100%;
