--- a/skin/frontend/creo/default/bootstrap/css/bootstrap.css
+++ b/skin/frontend/creo/default/bootstrap/css/bootstrap.css
@@ -5720,8 +5720,8 @@ button.close {
   overflow: hidden;
 }
 .modal {
-/*  display: none;
-*/  overflow: hidden;
+  display: none;
+  overflow: hidden;
   position: fixed;
   top: 0;
   right: 0;
