--- a/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
@@ -10,8 +10,7 @@ $isAdminUser = $this->isAdminUser();
 		<ul class="topbar-buttons">
 	<li>
                 <?php if(!$isAdminUser) : ?>
-                <label data-toggle="modal" data-target="#savePopup" data-placement="top" >
-                <input pdc-data="pdc-btn" pdc-action="SAVE_CUSTOMER_DESIGN" type="checkbox" style="margin:0;"><?php echo $this->__('SAVE');?></label>
+                <input data-toggle="modal" data-target="#savePopup" data-placement="top" pdc-data="pdc-btn" pdc-action="SAVE_CUSTOMER_DESIGN" type="checkbox" style="margin:0;"><?php echo $this->__('SAVE');?>
                 <?php else : ?>
                 <button type="button" pdc-data="pdc-btn" pdc-action="SAVE_SAMPLE" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Save this design as default design'); ?>" class=""><i class="pdc-check-box"></i> <?php echo $this->__('Save Sample Design');?></button>
                 <?php endif; ?>
