--- a/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
@@ -17,12 +17,12 @@ $isAdminUser = $this->isAdminUser();
             </li>
             <li>
                 <?php if($isAdminUser) : ?>
-                <button type="button" pdc-data="pdc-remove-sample" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('If you change the overlay image or background image. Then you need to remove old sample design! And create new design if need!'); ?>" class=""> 
+                <button type="button" pdc-data="pdc-remove-sample" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('If you change the overlay image or background image. Then you need to remove old sample design! And create new design if need!'); ?>" class="">
                 <span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span>
                     <?php echo $this->__('Remove Sample Design');?></button>
                 <?php endif; ?>
             </li>
-			<li data-toggle="modal" data-target="#downloadPopup_temp"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
+			<li data-toggle="modal" data-target="#downloadPopup"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
 			<?php if(Mage::getStoreConfig('pdp/customer_action/sharing')){ ?>
 			<li data-toggle="modal" data-target="#sharingPopup_temp"><button pdc-data="pdc-btn" pdc-action="SHARE" type="button" data-toggle="tooltip" data-placement="top" title="<?php echo $this->__('Share Your Design To Social networks'); ?>" class=""><i class="pdc-share"></i> <?php echo $this->__('Share');?></button></li>
 			<?php } ?>
