--- a/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
+++ b/app/design/frontend/creo/default/template/pdp/design/topbar.phtml
@@ -10,21 +10,21 @@ $isAdminUser = $this->isAdminUser();
 		<ul class="topbar-buttons">
 			<li>
                 <?php if(!$isAdminUser) : ?>
-                <button data-toggle="modal" pdc-data="pdc-btn" pdc-action="SAVE_CUSTOMER_DESIGN" data-target="#savePopup" type="button" data-toggle="tooltip" data-placement="top" title="<?php echo $this->__('Save Your Design'); ?>" class=""><i class="pdc-check-box"></i> <?php echo $this->__('SAVE');?></button>
+                <button data-toggle="modal" pdc-data="pdc-btn" pdc-action="SAVE_CUSTOMER_DESIGN" data-target="#savePopup" type="button" data-placement="top" title="<?php echo $this->__('Save Your Design'); ?>" class=""><i class="pdc-check-box"></i> <?php echo $this->__('SAVE');?></button>
                 <?php else : ?>
-                <button type="button" pdc-data="pdc-btn" pdc-action="SAVE_SAMPLE" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Save this design as default design'); ?>" class=""><i class="pdc-check-box"></i> <?php echo $this->__('Save Sample Design');?></button>
+                <button type="button" pdc-data="pdc-btn" pdc-action="SAVE_SAMPLE" data-toggle="modal" data-placement="bottom" title="<?php echo $this->__('Save this design as default design'); ?>" class=""><i class="pdc-check-box"></i> <?php echo $this->__('Save Sample Design');?></button>
                 <?php endif; ?>
             </li>
             <li>
                 <?php if($isAdminUser) : ?>
-                <button type="button" pdc-data="pdc-remove-sample" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('If you change the overlay image or background image. Then you need to remove old sample design! And create new design if need!'); ?>" class="">
+                <button type="button" pdc-data="pdc-remove-sample" data-toggle="modal" data-placement="bottom" title="<?php echo $this->__('If you change the overlay image or background image. Then you need to remove old sample design! And create new design if need!'); ?>" class="">
                 <span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span>
                     <?php echo $this->__('Remove Sample Design');?></button>
                 <?php endif; ?>
             </li>
-			<li data-toggle="modal" data-target="#downloadPopup"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-toggle="tooltip" data-placement="bottom" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
+			<li data-toggle="modal" data-target="#downloadPopup"><button pdc-data="pdc-btn" pdc-action="DOWNLOAD" type="button" data-placement="bottom" title="<?php echo $this->__('Download Your Design'); ?>" class=""><i class="pdc-file-download"></i> <?php echo $this->__('Download');?></button></li>
 			<?php if(Mage::getStoreConfig('pdp/customer_action/sharing')){ ?>
-			<li data-toggle="modal" data-target="#sharingPopup_temp"><button pdc-data="pdc-btn" pdc-action="SHARE" type="button" data-toggle="tooltip" data-placement="top" title="<?php echo $this->__('Share Your Design To Social networks'); ?>" class=""><i class="pdc-share"></i> <?php echo $this->__('Share');?></button></li>
+			<li data-toggle="modal" data-target="#sharingPopup_temp"><button pdc-data="pdc-btn" pdc-action="SHARE" type="button" data-placement="top" title="<?php echo $this->__('Share Your Design To Social networks'); ?>" class=""><i class="pdc-share"></i> <?php echo $this->__('Share');?></button></li>
 			<?php } ?>
 		</ul>
 	</div>
