listing page modufications

--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -53,6 +53,17 @@ $_helper = $this->helper('catalog/output');
                             continue;
                         }
                     }
+
+                    $ids=Mage::getResourceSingleton('catalog/product_type_configurable')
+            ->getChildrenIds($_product->getId());
+
+
+      $_subproducts = Mage::getModel('catalog/product')->getCollection()
+    ->addIdFilter ($ids)
+    ->addAttributeToSelect('styles')-> groupByAttribute('styles');
+echo "<pre>";print_r($_subproducts);echo "</pre>";
+
+                    
                 ?>
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
