--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -129,13 +129,22 @@ $_helper = $this->helper('catalog/output');
                 <?php if ($i++ % $_columnCount == 0): ?>
                 
                 <?php
-                    $ids=Mage::getResourceSingleton('catalog/product_type_configurable')
-            ->getChildrenIds($_product->getId());
+                    // get simple produts' ids
+$childIds = Mage::getModel('catalog/product_type_configurable')->getChildrenIds($_product->getId());
 
-      $_subproducts = Mage::getModel('catalog/product')->getCollection()
-    ->addIdFilter ($ids)
-    ->addAttributeToSelect('styles')-> groupByAttribute('styles');
-echo "<pre>";print_r($_subproducts);echo "</pre>";
+// get simple products
+$childProducts = Mage::getModel('catalog/product_type_configurable')
+                        ->getUsedProducts(null,$_product);
+
+// get configurable options
+$productAttributeOptions = $_product->getTypeInstance(true)->getConfigurableAttributesAsArray($_product);
+$attributeOptions = array();
+foreach ($productAttributeOptions as $productAttribute) {
+    foreach ($productAttribute['values'] as $attribute) {
+        echo $attributeOptions[$productAttribute['label']][$attribute['value_index']] = $attribute['store_label']."<br>";
+    }
+}
+exit;
                 ?>
                     <ul class="products-grid">
                     <?php endif ?>
