--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -46,15 +46,8 @@ $_helper = $this->helper('catalog/output');
             <?php $_iterator = 0; ?>
             <ol class="products-list products-grid" id="products-list">
             <?php foreach ($_productCollection as $_product): ?>
-                <?php 
-                    if($_product->getTypeId() == "simple" && $_GET['styles']!=22){
-                        $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
-                        if($parentIds){
-                            continue;
-                        }
-                    }
-                ?>
                 
+
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
                             <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" /></a>
@@ -125,6 +118,14 @@ $_helper = $this->helper('catalog/output');
             foreach ($_productCollection as $_product): ?>
                 <?php if ($i++ % $_columnCount == 0): ?>
                 
+                <?php 
+                    if(($_product->getTypeId() == "simple") && ($_GET['styles']!=22){
+                        $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
+                        if($parentIds){
+                            continue;
+                        }
+                    }
+                ?>
                
                     <ul class="products-grid">
                     <?php endif ?>
