--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -25,6 +25,7 @@
  */
 ?>
 <?php
+
 /**
  * Product list template
  *
@@ -119,7 +120,9 @@ $_helper = $this->helper('catalog/output');
                 <?php if ($i++ % $_columnCount == 0): ?>
                 
                 <?php 
-                    if(($_product->getTypeId() == "simple") && ($_GET['styles']!=22)){
+
+                    if(($_product->getTypeId() == "simple") && (!isset($_GET['styles']))){
+                        echo "I am here";
                         $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
                         if($parentIds){
                             continue;
