--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -121,13 +121,13 @@ $_helper = $this->helper('catalog/output');
                 
                 <?php 
 
-                    if(($_product->getTypeId() == "simple") && (!isset($_GET['styles']))){
-                        echo "I am here";
-                        $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
-                        if($parentIds){
-                            continue;
-                        }
-                    }
+                    //if(($_product->getTypeId() == "simple") && (!isset($_GET['styles']))){
+                        //echo "I am here";
+                        //$parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
+                       // if($parentIds){
+                        //    continue;
+                       // }
+                    //}
                 ?>
                
                     <ul class="products-grid">
