--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -121,8 +121,8 @@ $_helper = $this->helper('catalog/output');
                 
                 <?php 
 
-                    if($_product->getTypeId() == "simple"){
-                        $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
+                    if($_product->getResource()->getTypeId() == "simple"){
+                        $parentIds = Mage::getResourceSingleton('catalog/product_type_configurable')->getParentIdsByChild($_product->getId());
                         if($parentIds){
                             continue;
                         }
