design your own cap page fixes

--- a/app/design/frontend/creo/default/template/pdp/action/download.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/download.phtml
@@ -4,8 +4,10 @@
 		<div class="modal-content">
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		<div class="modal-holder">
+		<div class="modal-body">
 		<div class="heading-holder"><h3><?php echo $this->__('Download customized design'); ?></h3></div>
 			<button class="btn btn-md btn-primary" pdc-data="pdc-btn" pdc-action="DOWNLOAD_AS_IMAGE"><?php echo $this->__('Save as photo');?></button> | <button class="btn btn-md btn-primary" pdc-data="pdc-btn" pdc-action="DOWNLOAD_AS_PDF"><?php echo $this->__('Save as PDF');?></button> 
+		</div>
 		</div>
 	  </div>
 	</div>
