--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -47,7 +47,15 @@ $_helper = $this->helper('catalog/output');
             <?php $_iterator = 0; ?>
             <ol class="products-list products-grid" id="products-list">
             <?php foreach ($_productCollection as $_product): ?>
-                
+                <?php 
+                    echo $_product->getTypeId()."sss";
+                    if($_product->getTypeId() == "simple"){
+                        echo $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
+                        if($parentIds){
+                            continue;
+                        }
+                    }
+                ?>
 
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
@@ -120,9 +128,9 @@ $_helper = $this->helper('catalog/output');
                 <?php if ($i++ % $_columnCount == 0): ?>
                 
                 <?php 
-
-                    if($_product->getResource()->getTypeId() == "simple"){
-                        $parentIds = Mage::getResourceSingleton('catalog/product_type_configurable')->getParentIdsByChild($_product->getId());
+                    echo $_product->getTypeId()."ddd";
+                    if($_product->getTypeId() == "simple"){
+                        echo $parentIds = Mage::getModel('catalog/product_type_grouped')->getParentIdsByChild($_product->getId());
                         if($parentIds){
                             continue;
                         }
