--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -169,7 +169,7 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
                 ?>
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                     <?php if($smallimg){?>
-                        <a  href="<?php echo $_product->getProductUrl() ?>?style=22" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area">
+                        <a  href="<?php echo $_product->getProductUrl() ?>?styles=22" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area">
                         
                         <img src="<?php echo $smallimg; ?>" width="480" height="650" alt="" />
                         </a>
@@ -182,7 +182,7 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
                         <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> quick view</span></a>
                         <div class="text-area">
                         <?php if($smallimg){?>
-                            <h3><a href="<?php echo $_product->getProductUrl() ?>?style=22" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
+                            <h3><a href="<?php echo $_product->getProductUrl() ?>?styles=22" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
                         <?php }else{ ?>
 
                             <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
