detail page changes

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -148,7 +148,7 @@ if($_GET[styles]==22){?>
 
 <script>
 jQuery(document).ready(function(){
-    jQuery('#swatches_option_value_22').click;
+    jQuery('#swatches_option_value_22').click();
 });
 </script>
 
